--- a/modules/gateway/assertions/GenerateOAuthSignatureBaseStringAssertion/src/main/java/com/l7tech/external/assertions/generateoauthsignaturebasestring/console/GenerateOAuthSignatureBaseStringPropertiesDialog.form
+++ b/modules/gateway/assertions/GenerateOAuthSignatureBaseStringAssertion/src/main/java/com/l7tech/external/assertions/generateoauthsignaturebasestring/console/GenerateOAuthSignatureBaseStringPropertiesDialog.form
@@ -84,6 +84,10 @@
                     <item value="${request.http.method}"/>
                     <item value="GET"/>
                     <item value="POST"/>
+                    <item value="PUT"/>
+                    <item value="DELETE"/>
+                    <item value="HEAD"/>
+                    <item value="OPTIONS"/>
                   </model>
                 </properties>
               </component>
@@ -300,6 +304,7 @@
                 </constraints>
                 <properties>
                   <text value="1.0"/>
+                  <toolTipText value="Generate OAuth Signature Base String only applies to OAuth version 1.0"/>
                 </properties>
               </component>
             </children>
