--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
@@ -3,7 +3,7 @@
   <grid id="83deb" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="52" y="32" width="624" height="650"/>
+      <xy x="52" y="32" width="628" height="650"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -647,8 +647,8 @@
                       <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Use Keepalive"/>
-                      <toolTipText value="Enable HTTP keepalive for this connection, to improve routing performance."/>
+                      <text value="Use Keep-Alive"/>
+                      <toolTipText value="Enable HTTP keep-alive for this connection, to improve routing performance."/>
                     </properties>
                   </component>
                   <component id="89783" class="javax.swing.JLabel">
