--- a/modules/gateway/assertions/JDBCQueryAssertion/src/main/java/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/JDBCQueryAssertion/src/main/java/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.form
@@ -3,11 +3,11 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="569" height="550"/>
+      <xy x="20" y="20" width="569" height="600"/>
     </constraints>
     <properties>
-      <minimumSize width="550" height="550"/>
-      <preferredSize width="550" height="550"/>
+      <minimumSize width="550" height="600"/>
+      <preferredSize width="550" height="600"/>
     </properties>
     <border type="none"/>
     <children>
@@ -44,12 +44,12 @@
           </component>
         </children>
       </grid>
-      <grid id="5f769" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="5f769" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="480" height="115"/>
-            <preferred-size width="480" height="115"/>
+            <minimum-size width="480" height="150"/>
+            <preferred-size width="480" height="150"/>
           </grid>
         </constraints>
         <properties/>
@@ -81,16 +81,6 @@
               </component>
             </children>
           </grid>
-          <component id="d3681" class="javax.swing.JCheckBox" binding="failAssertionCheckBox">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <label value="Fail assertion if there are no results returned by the query."/>
-              <selected value="true"/>
-              <text resource-bundle="com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog" key="label.fail.assertion"/>
-            </properties>
-          </component>
           <grid id="594d4" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -117,6 +107,27 @@
               </component>
             </children>
           </grid>
+          <component id="d3681" class="javax.swing.JCheckBox" binding="failAssertionCheckBox">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <label value="Fail assertion if there are no results returned by the query."/>
+              <selected value="true"/>
+              <text resource-bundle="com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog" key="label.fail.assertion"/>
+            </properties>
+          </component>
+          <component id="b135d" class="javax.swing.JCheckBox" binding="generateResultsAsXMLCheckBox" default-binding="true">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <label value="Generate XML Result"/>
+              <selected value="false"/>
+              <text resource-bundle="com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog" key="label.generate.xmlResult"/>
+              <toolTipText resource-bundle="com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog" key="tooltip.generate.xmlResult"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="2b81e" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -161,7 +172,7 @@
           </grid>
         </constraints>
         <properties>
-          <dividerLocation value="135"/>
+          <dividerLocation value="170"/>
           <lastDividerLocation value="-1"/>
           <orientation value="0"/>
           <resizeWeight value="0.7"/>
@@ -280,8 +291,8 @@
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <minimum-size width="480" height="150"/>
-                    <preferred-size width="480" height="150"/>
+                    <minimum-size width="480" height="115"/>
+                    <preferred-size width="480" height="115"/>
                   </grid>
                 </constraints>
                 <properties/>
